compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case__basic_battern_matching.snap
---
source: compiler-core/src/fsharp/tests/case.rs
expression: "\npub fn foo(x) {\n  case x {\n    1 -> 1\n    _ -> 2\n  }\n}\n"
---
module rec my.``mod``
let foo (x: int): int = begin
    match x with
    | 1 ->
        1
    | _ ->
        2
end
