compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case__not.snap
---
source: compiler-core/src/fsharp/tests/case.rs
assertion_line: 67
expression: "pub fn main(x, y) {\n  case x {\n    _ if !y -> 0\n    _ -> 1\n  }\n}\n"
---
module rec my.``mod``
let main(x: 'u8) (y: bool): int = begin
    match x with
    | _ when not y ->
        0
    | _ ->
        1
end
