compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case__positive_zero_pattern.snap
---
source: compiler-core/src/fsharp/tests/case.rs
expression: "\npub fn foo(x) {\n  case x {\n    0.0 -> 1\n    _ -> 2\n  }\n}\n"
---
module rec my.``mod``
let foo (x: float): int = begin
    match x with
    | 0.0 ->
        1
    | _ ->
        2
end
